user: remove unused privileges